@@ -1368,12 +1368,13 @@ For more information, look at http://www.oftc.net/oftc/NickServ/CertFP
 SASL authentication
 ^^^^^^^^^^^^^^^^^^^
 
-WeeChat supports SASL authentication, using two mechanisms: "plain" (default)
-or "dh-blowfish" (crypted password).
+WeeChat supports SASL authentication, using three mechanisms: "plain" (plain
+text password), "dh-blowfish" (crypted password) or "external" (client side SSL
+cert).
 
 Options in servers are:
 
-* 'sasl_mechanism': mechanism to use ("plain" or "dh-blowfish")
+* 'sasl_mechanism': mechanism to use ("plain", "dh-blowfish" or "external")
 * 'sasl_timeout': timeout (in seconds) for authentication
 * 'sasl_username': username (nick)
 * 'sasl_password': password
@@ -2038,7 +2039,7 @@ Translations::
 
 Patches::
     Dmitry Kobylin, Rudolf Polzer, Jim Ramsay, Pistos, Gwenn, Dominik Honnef,
-    JD Horelick, Stefano Pigozzi, Gu1ll4um3r0m41n
+    JD Horelick, Stefano Pigozzi, Gu1ll4um3r0m41n, Kyle Fuller
 
 
 [[support]]
