@@ -1396,12 +1396,14 @@ Per maggiori informazioni consultare http://www.oftc.net/oftc/NickServ/CertFP
 Autenticazione SASL
 ^^^^^^^^^^^^^^^^^^^
 
-WeeChat supporta l'autenticazione SASL, usando due meccanismi: "plain"
-(predefinito) o "dh-blowfish" (password codificata).
+// TRANSLATION MISSING
+WeeChat supports SASL authentication, using three mechanisms: "plain" (plain
+text password), "dh-blowfish" (crypted password) or "external" (client side SSL
+cert).
 
 Le opzioni nel server sono:
 
-* 'sasl_mechanism': meccanismo da usare ("plain" o "dh-blowfish")
+* 'sasl_mechanism': meccanismo da usare ("plain", "dh-blowfish" o "external")
 * 'sasl_timeout': timeout (in secondi) per l'autenticazione
 * 'sasl_username': nome utente (nick)
 * 'sasl_password': password
@@ -2084,7 +2086,7 @@ Traduzioni::
 
 Patches::
     Dmitry Kobylin, Rudolf Polzer, Jim Ramsay, Pistos, Gwenn, Dominik Honnef,
-    JD Horelick, Stefano Pigozzi, Gu1ll4um3r0m41n
+    JD Horelick, Stefano Pigozzi, Gu1ll4um3r0m41n, Kyle Fuller
 
 
 [[support]]
